[gd_scene load_steps=29 format=3 uid="uid://g63u1awxudqx"]

[ext_resource type="Script" path="res://scenes/player/Noir.gd" id="1_1vwh7"]
[ext_resource type="Texture2D" uid="uid://cblqrgn6y23fg" path="res://assets/Pixel Protagonist/AnimationSheet_invert.png" id="1_qt84a"]
[ext_resource type="Texture2D" uid="uid://bq3ke53yovgu0" path="res://assets/Pixel Protagonist/AnimationSheet_rotate.png" id="3_p1kto"]

[sub_resource type="AtlasTexture" id="AtlasTexture_afkck"]
atlas = ExtResource("1_qt84a")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cvs2"]
atlas = ExtResource("1_qt84a")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfspd"]
atlas = ExtResource("3_p1kto")
region = Rect2(168, 120, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tegui"]
atlas = ExtResource("3_p1kto")
region = Rect2(144, 120, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_td261"]
atlas = ExtResource("1_qt84a")
region = Rect2(0, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rvo0"]
atlas = ExtResource("1_qt84a")
region = Rect2(48, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo2tv"]
atlas = ExtResource("1_qt84a")
region = Rect2(72, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftp3q"]
atlas = ExtResource("1_qt84a")
region = Rect2(96, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o81km"]
atlas = ExtResource("1_qt84a")
region = Rect2(120, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_l56xr"]
atlas = ExtResource("3_p1kto")
region = Rect2(168, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ug6bw"]
atlas = ExtResource("3_p1kto")
region = Rect2(120, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxo2i"]
atlas = ExtResource("3_p1kto")
region = Rect2(96, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_075by"]
atlas = ExtResource("3_p1kto")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_psocm"]
atlas = ExtResource("3_p1kto")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsafp"]
atlas = ExtResource("1_qt84a")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pxjw"]
atlas = ExtResource("1_qt84a")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmy4t"]
atlas = ExtResource("1_qt84a")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jaho"]
atlas = ExtResource("1_qt84a")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2qtq"]
atlas = ExtResource("3_p1kto")
region = Rect2(168, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_y43ap"]
atlas = ExtResource("3_p1kto")
region = Rect2(144, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuavx"]
atlas = ExtResource("3_p1kto")
region = Rect2(120, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0acfv"]
atlas = ExtResource("3_p1kto")
region = Rect2(96, 96, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ydngf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_afkck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cvs2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfspd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tegui")
}],
"loop": true,
"name": &"default_invert",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_td261")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rvo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo2tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftp3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o81km")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l56xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ug6bw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxo2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_075by")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psocm")
}],
"loop": false,
"name": &"jump_invert",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsafp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pxjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmy4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jaho")
}],
"loop": false,
"name": &"walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2qtq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y43ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuavx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0acfv")
}],
"loop": false,
"name": &"walk_invert",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ocnuq"]
size = Vector2(9.5, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nwkeq"]
size = Vector2(9.5, 17)

[node name="Noir" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 2
script = ExtResource("1_1vwh7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ydngf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.25, 3.5)
shape = SubResource("RectangleShape2D_ocnuq")

[node name="Node2D" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Node2D"]
position = Vector2(11, 2)

[node name="ChangeGravityTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.25, 3.5)
shape = SubResource("RectangleShape2D_nwkeq")

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ChangeGravityTimer" to="." method="_on_change_gravity_timer_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
